deployment/components/infra/monitoring/prometheus-node-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: <<namespace>>
  labels:
    app: node-exporter
    name: node-exporter
  name: node-exporter
spec:
  clusterIP: None
  ports:
  - name: scrape
    port: 9100
    protocol: TCP
  selector:
    app: node-exporter
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  namespace: <<namespace>>
  name: node-exporter
spec:
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node-exporter
      name: node-exporter
      annotations:
        prometheus.io/port: "9100"
    spec:
      containers:
      - image: prom/node-exporter:<<node-exporter-version>>
        name: node-exporter
        resources:
          requests:
            cpu: "25m"
          limits:
            cpu: "50m"
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: scrape
      hostNetwork: true
      hostPID: true
